--- a/Iris_clustering.ipynb
+++ b/Iris_clustering.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "source": [
     "# Predicting the clusters for the Iris flowers dataset🌷🌷\n",
+    "#### Written By- Umang Tripathi\n",
     "This notebook utilises various python's visualizing libraries like Matplotlib and machine learning libraries like sklearn, pandas to predict the clusters for the iris flowers dataset.\n",
     "\n",
     "## 1. Problem Statement\n",
